tests/vertical-slice/accept/array_literal_int_sum.hew
fn main() -> i64 {
    let values = [1, 2, 3];
    if values.len() != 3 { return 70; }
    if values[0] != 1 { return 71; }
    if values.get(0) != 1 { return 72; }
    var sum: i64 = 0;
    for value in values {
        sum = sum + value;
    }
    sum
}
