tests/vertical-slice/reject/var_by_value_param_noncopy.hew
type Counter {
    count: i64,
}

fn bump(var c: Counter) -> Counter {
    c.count = c.count + 1;
    return c;
}

fn main() -> i64 {
    let c = Counter { count: 0 };
    let updated = bump(c);
    return updated.count;
}
